# parallel-project

./: .directory  .gitignore  CMakeLists.txt  DisplayImage.cpp  OOP.csv  OUT_STRUCT.html  Sequential.cpp  Structured.cpp  TimeProfiler.cpp  TimeProfiler.h  main.cpp  out.html  table.csv
imProc/: Image.cpp  Image.h  Matrix.h  Point.cpp  imProc.h  point.h
src/: mainOOP.cpp  mainSequential.cpp  mainSimpleStructured.cpp  mainStructured.cpp  mainStructuredBlocks.cpp
src/__deprecated/: commonCommandLine.cpp
src/benchOOP/: .directory  BenchOOP.cpp  BenchOOP.h  ClosureBenchOOP.cpp  ClosureBenchOOP.h  DilationBenchOOP.cpp  DilationBenchOOP.h  ErosionBenchOOP.cpp  ErosionBenchOOP.h  OpeningBenchOOP.cpp  OpeningBenchOOP.h
src/benchSEQ/: BenchSEQ.cpp  BenchSEQ.h
src/benchSTRUCT/: BenchSTRUCT.cpp  BenchSTRUCT.h
src/convolutionBench/: BenchManager.cpp  BenchManager.h  IConvBench.cpp  IConvBench.h
src/imProc/: Image.h  Matrix.cpp  Matrix.h  Point.cpp  Point.h  StructuringElement.cpp  StructuringElement.h
src/utils/: TimeProfiler.cpp  TimeProfiler.h  utils.h
study/OOP_vs_STRUCT_1/debug-O0/: ObjectOriented  Structured  StructuredSimple  forceInline.csv
study/OOP_vs_STRUCT_1/debug-O1/: OOP.csv  ObjectOriented-forceInline  StructuredSimple  forceInlineDisabled.csv  inlineDisabled.csv
study/force_inline/: inline_vs_no_inline.ods  inline_vs_no_inline.sh  inline_vs_no_inline_01_v2.sh
study/force_inline/p5k-premium-core2duo/debug-O0/: .directory  forceInline.csv  forceInlineDisabled.csv  inlineDisabled.csv  inline_vs_no_inline.sh
study/force_inline/p5k-premium-core2duo/debug-O1/: .directory  ObjectOriented  ObjectOriented-forceInlineDisabled  Structured  forceInline.csv  forceInlineDisabled.csv  inlineDisabled.csv
study/force_inline/yoga-13/debug-O0/: .~lock.Inline.ods#  Structured  forceInline.csv  forceInlineDisabled.csv  inlineDisabled.csv
study/force_inline/yoga-13/debug-O1/: ObjectOriented_force_inline  forceInline.csv  forceInlineDisabled.csv  inlineDisabled.csv
vtune/ParallelProject/: ParallelProject.amplxeproj
vtune/ParallelProject-Structured/: ParallelProject-Structured.amplxeproj
vtune/ParallelProject-Structured/r000hs/: r000hs.amplxe
vtune/ParallelProject-Structured/r000hs/config/: collection.cfg  context_values.cfg  log.cfg  runss.options  state.cfg
vtune/ParallelProject-Structured/r000hs/data.0/: 14498-14505.0-14505.0.th  14498-14505.0-14505.0.th.aux  14498-14505.0-14524.0.th  14498-14505.0-14524.0.th.aux  14498-14505.0-14525.0.th  14498-14505.0-14525.0.th.aux  14498-14505.0.trace  systemcollector-14498-nagash-desktop.sc
vtune/ParallelProject-Structured/r000hs/sqlite-db/: dicer.db
vtune/ParallelProject-Structured/r001hs/: Debug O1 i 30 ft 2.amplxe
vtune/ParallelProject-Structured/r001hs/config/: collection.cfg  context_values.cfg  log.cfg  runss.options  state.cfg
vtune/ParallelProject-Structured/r001hs/data.0/: 14910-14917.0-14917.0.th  14910-14917.0-14917.0.th.aux  14910-14917.0-14935.0.th  14910-14917.0-14935.0.th.aux  14910-14917.0-14936.0.th  14910-14917.0-14936.0.th.aux  14910-14917.0.trace  systemcollector-14910-nagash-desktop.sc
vtune/ParallelProject-Structured/r001hs/sqlite-db/: dicer.db
vtune/ParallelProject-Structured/r002hs/: Debug no O i 20 ft 2.amplxe
vtune/ParallelProject-Structured/r002hs/config/: collection.cfg  context_values.cfg  log.cfg  runss.options  state.cfg
vtune/ParallelProject-Structured/r002hs/data.0/: 15434-15440.0-15440.0.th  15434-15440.0-15440.0.th.aux  15434-15440.0-15459.0.th  15434-15440.0-15459.0.th.aux  15434-15440.0-15460.0.th  15434-15440.0-15460.0.th.aux  15434-15440.0.trace  systemcollector-15434-nagash-desktop.sc
vtune/ParallelProject-Structured/r002hs/sqlite-db/: dicer.db
vtune/ParallelProject-Structured/r003hs/: r003hs.amplxe
vtune/ParallelProject-Structured/r003hs/config/: context_values.cfg  log.cfg  runss.options  state.cfg
vtune/ParallelProject-Structured/r003hs/data.0/: 10807-10813.0-10813.0.th  10807-10813.0-10813.0.th.aux  10807-10813.0-10830.0.th  10807-10813.0-10830.0.th.aux  10807-10813.0-10831.0.th  10807-10813.0-10831.0.th.aux  10807-10813.0.trace  systemcollector-10807-nagash-yoga.sc
vtune/ParallelProject-Structured/r003hs/sqlite-db/: dicer.db
vtune/ParallelProject-Structured/r004hs/: r004hs.amplxe
vtune/ParallelProject-Structured/r004hs/config/: context_values.cfg  log.cfg  runss.options  state.cfg
vtune/ParallelProject-Structured/r004hs/data.0/: 11148-11154.0-11154.0.th  11148-11154.0-11154.0.th.aux  11148-11154.0-11171.0.th  11148-11154.0-11171.0.th.aux  11148-11154.0-11172.0.th  11148-11154.0-11172.0.th.aux  11148-11154.0.trace  systemcollector-11148-nagash-yoga.sc
vtune/ParallelProject-Structured/r004hs/sqlite-db/: dicer.db
vtune/ParallelProject-Structured/r005hs/: r005hs.amplxe
vtune/ParallelProject-Structured/r005hs/config/: context_values.cfg  log.cfg  runss.options
vtune/ParallelProject-Structured/r005hs/data.0/: 11351-11357.0-11357.0.th  11351-11357.0-11357.0.th.aux  11351-11357.0-11374.0.th  11351-11357.0-11374.0.th.aux  11351-11357.0-11375.0.th  11351-11357.0-11375.0.th.aux  11351-11357.0.trace  systemcollector-11351-nagash-yoga.sc
vtune/ParallelProject-Structured/r005hs/sqlite-db/: dicer.db
vtune/ParallelProject-Structured/r006hs/: r006hs.amplxe
vtune/ParallelProject-Structured/r006hs/config/: context_values.cfg  log.cfg  runss.options  state.cfg
vtune/ParallelProject-Structured/r006hs/data.0/: 11479-11485.0-11485.0.th  11479-11485.0-11485.0.th.aux  11479-11485.0-11502.0.th  11479-11485.0-11502.0.th.aux  11479-11485.0-11503.0.th  11479-11485.0-11503.0.th.aux  11479-11485.0.trace  systemcollector-11479-nagash-yoga.sc
vtune/ParallelProject-Structured/r006hs/sqlite-db/: dicer.db
vtune/ParallelProject-Structured/r007hs/: r007hs.amplxe
vtune/ParallelProject-Structured/r007hs/config/: context_values.cfg  (+3 more)
vtune/ParallelProject-Structured/r008hs/: r008hs.amplxe
vtune/ParallelProject-Structured/r009hs/: r009hs.amplxe
vtune/ParallelProject-Structured/r010hs/: r010hs.amplxe
vtune/ParallelProject/r005hs/: Debug no O i20 ft 2.amplxe
(+89 files in other folders)
